:bug: Fix build for arm